[project]
name = "subcell_pipeline"
description = "Simulation, analysis, and visualization for subcellular models"
authors = [
    { name = "Blair Lyons", email = "blairl@alleninstitute.org" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = { file = "LICENSE" }
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=1.5.3",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.4",
    "pacmap>=0.7.2",
    "simulariumio>=1.11.0",
    "container-collection>=0.6.1",
    "scikit-learn>=1.5.0",
    "ipykernel>=6.29.4",
    "setuptools>=70.0.0",
    "io-collection>=0.10.2",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/Simularium/subcell-pipeline"
"Bug Tracker" = "https://github.com/Simularium/subcell-pipeline/issues"
Documentation = "https://Simularium.github.io/subcell-pipeline"
"User Support" = "https://github.com/Simularium/subcell-pipeline/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "check-manifest>=0.49",
    "pre-commit>=3.7.1",
    "isort>=5.13.2",
]
lint = [
    "black>=24.4.2",
    "ruff>=0.4.6",
    "mypy>=1.10.0",
]
test = [
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "pytest-raises>=0.11",
    "coverage>=7.5.3",
]
docs = [
    "sphinx>=7.3.7",
    "furo>=2024.5.6",
    "myst-parser>=3.0.1",
    "sphinx-copybutton>=0.5.2",
]

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    # "S",    # bandit
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
  ".pre-commit-config.yaml",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "*docs/**",
  "*.ipynb",
  "*tests/**",
  "*templates/*",
  "*configs/*",
  ".editorconfig",
  "environment.yml",
  "pdm.lock",
  "requirements.txt",
  "Makefile",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
